<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/guangzhou_tower" />

        <TextView
            android:id="@+id/detail_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/carter_one"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/GZT_name"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:text="Address"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_address_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"
            android:text="@string/GZT_address"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:text="Hours"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/detail_hours_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"
            android:text="@string/GZT_hours"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:text="Average Price"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_prices_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"
            android:text="@string/GZT_price"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:text="About"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/detail_about_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"
            android:text="@string/GZT_about"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>